boton agegar publicacion en foro

--- a/AquaNet/vistas/foroVista.html
+++ b/AquaNet/vistas/foroVista.html
@@ -91,6 +91,7 @@
             <section class="area-publicaciones">
                 <button class="btn-agregar-publicacion">
                     <i class="fa-solid fa-pen-to-square"></i>
+                    <p>Publicar</p>
                 </button>
 
                 <div class="barra-superior">
