--- a/AquaNet/vistas/foroVista.html
+++ b/AquaNet/vistas/foroVista.html
@@ -37,7 +37,7 @@
     </header>
 
     <main class="contenido-principal">
-       
+
         <div class="semiNav">
             <a href="../vistas/home.html" class="btn-volver">← Volver</a>
             <div class="busqueda">
@@ -89,14 +89,15 @@
             </aside>
 
             <section class="area-publicaciones">
-                <button class="btn-agregar-publicacion">
-                    <i class="fa-solid fa-pen-to-square"></i>
-                    <p>Publicar</p>
-                </button>
 
                 <div class="barra-superior">
                     <div class="pestanas">
                         <button class="pestana activa">Últimas publicaciones</button>
+                    </div>
+
+                    <div class="pestanas">
+                        <button class="postear">
+                            <i class="fa-solid fa-pen-to-square"></i>Publicar</button>
                     </div>
                 </div>
 
