Agrego imagen en home y breadcrumb en monitoreo

--- a/AquaNet/vistas/detalle-monitoreo.html
+++ b/AquaNet/vistas/detalle-monitoreo.html
@@ -38,8 +38,12 @@
 
     <main class="contenido-principal">
         <div class="contenedor-fluido">
-            <a href="voluntariadoVista.html" class="enlace-volver">
-                < Volver</a>
+           <!--<a href="voluntariadoVista.html" class="enlace-volver">< Volver</a>-->
+             <nav class="breadcrumb">
+                <a href="voluntariadoVista.html">Voluntariados</a>
+                <span>›</span>
+                 <span class="actual">Monitoreo del agua</span>
+             </nav>
 
                     <section class="banner-principal">
                         <div class="contenido-banner">
