--- a/AquaNet/vistas/home.html
+++ b/AquaNet/vistas/home.html
@@ -35,12 +35,15 @@
             </div>
         </div>
     </header>
-
-    <div class="titulo-pagina">
-        <p id="texto-titulo-principal">Cuidemos juntos el agua de Mendoza</p>
+    
+    <div class="banner">
+     <h3>Cuidemos juntos el agua de Mendoza</h3>
+     <p>Consultá cortes, disponibilidad por zonas y consejos para reducir el consumo.</p>
+     <!--<div class="titulo-pagina">
+       <p id="texto-titulo-principal">Cuidemos juntos el agua de Mendoza</p> -->
 
         <div class="seccion">
-            <p id="texto-titulo">Consultá el estado del agua de tu zona</p>
+          <!--  <p id="texto-titulo">Consultá el estado del agua de tu zona</p>-->
             <label></label>
             <select id="zonaSelect1" name="zonaSelect">
                 <option value="">Seleccioná tu zona</option>
